# barrs

./: .gitignore  AGENTS.md  Cargo.toml  README.md  barrs.lua  release.toml
.github/workflows/: release.yml
Formula/: barrs.rb
scripts/: generate-homebrew-formula.sh
src/: app.rs  cli.rs  config.rs  daemon.rs  error.rs  ipc.rs  lib.rs  main.rs  plugin.rs  render.rs  rift.rs
