[package]
name = "barrs"
version = "0.1.9"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
libc = "0.2"
mlua = { version = "0.10", features = ["lua54", "serialize", "vendored"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.44", features = ["macros", "net", "rt", "sync", "io-util", "time"] }

[dev-dependencies]
tempfile = "3.13"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3.2", features = ["NSApplication", "NSColor", "NSControl", "NSEvent", "NSFont", "NSGraphics", "NSPanel", "NSResponder", "NSRunningApplication", "NSScreen", "NSTextField", "NSView", "NSWindow"] }
objc2-foundation = { version = "0.3.2", features = ["NSGeometry", "NSString"] }
